fixed text not showing up on photos with white background

--- a/Portfolio.css
+++ b/Portfolio.css
@@ -152,7 +152,7 @@ body.fade-out {
 }
 
 .text {
-    color: rgb(255, 255, 255);
+    color: rgb(150, 135, 135);
     padding: 1vw;
     position: absolute;
     bottom: 0;
